Fix safari tab alignment

--- a/src/pages/CharacterInventory/index.scss
+++ b/src/pages/CharacterInventory/index.scss
@@ -9,8 +9,8 @@
   width: 100%;
   max-width: calc(100vw - 4rem);
   position: relative;
-  display: 'flex';
-  justify-content: 'center';
+  display: flex;
+  justify-content: center;
 }
 
 .character-card {
